# telegram-sticker-utils

./: .gitignore  README.md  pyproject.toml
playground/: resize.py
playground/output/: 300_ori.webm  512_ori.webm
src/telegram_sticker_utils/: __init__.py  custom.py  resize.py
src/telegram_sticker_utils/core/: _sort.py  const.py  rules.json
