[project]
name = "telegram-sticker-utils"
version = "0.1.0"
description = "easy and fast processing of telegram stickers"
authors = [
    {name = "sudoskys", email = "coldlando@hotmail.com"},
]
dependencies = [
    "ffmpy>=0.3.2",
    "loguru>=0.7.2",
    "Pillow>=10.2.0",
    "pngquant>=1.0.7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
