[project]
name = "telegram-sticker-utils"
version = "0.2.9"
description = "easy and fast processing of telegram stickers"
authors = [
    { name = "sudoskys", email = "coldlando@hotmail.com" },
]
dependencies = [
    "loguru>=0.7.2",
    "Wand>=0.6.13",
    "Pillow>=6.2.0",
    "ffmpy>=0.3.2",
    "emoji>=2.12.1",
    "setuptools>=60.0.0",
    "magika>=0.5.1",
    "moviepy>=1.0.3",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["telegram", "sticker", "image", "video", "processing", "ffmpeg", "pillow"]

[project.urls]
Repository = "https://github.com/sudoskys/telegram-sticker-utils"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
